fixed main section text on small screen

--- a/src/app/styles.sass
+++ b/src/app/styles.sass
@@ -643,7 +643,11 @@ footer
                 width: 360px
 
 
-
+@media (max-width: 468px)
+    .mainPageBox
+        padding-inline: 2rem
+        h1
+            font-size: 2rem
 
 @media (max-width: 420px)
     .mainPageBox
